--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Diego3pz/agenda-contactos-backend#readme",
   "dependencies": {
+    "@getbrevo/brevo": "^2.2.0",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
@@ -28,6 +30,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
