--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon --exec ts-node src/index.ts",
     "dev:api": "nodemon --exec ts-node src/index.ts --api",
     "build": "tsc",
-    "start": "node ./dist/index.ts"
+    "start": "node ./dist/index.js"
   },
   "repository": {
     "type": "git",
